Prefer Integer.valueOf over explicit boxing
Addresses a FindBugs complaint.